--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,10 @@ pest = "2.1.0"
 pest_derive = "2.1.0"
 strsim = "0.8.0"
 regex = "1.1.0"
+
+[dev-dependencies]
+criterion = "0.2"
+
+[[bench]]
+name = "small_data"
+harness = false
